Update all endpoints to complete
Add Authors and Books endpoints to swagger
