# swagger.json
@@ -26,6 +26,62 @@
             "description": "Internal server error"
           }
         }
+      },
+      "post": {
+        "summary": "Create a new book",
+        "tags": [
+          "Books"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "id",
+                  "title",
+                  "publicationDate",
+                  "authorIds"
+                ],
+                "properties": {
+                  "id": {
+                    "type": "string",
+                    "example": "b4"
+                  },
+                  "title": {
+                    "type": "string",
+                    "example": 1984
+                  },
+                  "publicationDate": {
+                    "type": "string",
+                    "example": "1949-06-08"
+                  },
+                  "authorIds": {
+                    "type": "array",
+                    "items": {
+                      "type": "string"
+                    },
+                    "example": [
+                      "a1"
+                    ]
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Book created successfully"
+          },
+          "400": {
+            "description": "Invalid data, book ID already exists, or one or more authors do not exist"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
       }
     },
     "/books/{id}": {
@@ -49,6 +105,101 @@
         "responses": {
           "200": {
             "description": "Book returned successfully"
+          },
+          "404": {
+            "description": "Book not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      },
+      "put": {
+        "summary": "Update a book",
+        "tags": [
+          "Books"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "description": "The unique identifier of the book",
+            "schema": {
+              "type": "string",
+              "example": "b1"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "title",
+                  "publicationDate",
+                  "authorIds"
+                ],
+                "properties": {
+                  "title": {
+                    "type": "string",
+                    "example": 1984
+                  },
+                  "publicationDate": {
+                    "type": "string",
+                    "example": "1949-06-08"
+                  },
+                  "authorIds": {
+                    "type": "array",
+                    "items": {
+                      "type": "string"
+                    },
+                    "example": [
+                      "a1"
+                    ]
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Book updated successfully"
+          },
+          "400": {
+            "description": "Invalid book data"
+          },
+          "404": {
+            "description": "Book not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Delete a book by id",
+        "tags": [
+          "Books"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "description": "The unique identifier of the book",
+            "schema": {
+              "type": "string",
+              "example": "b1"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Book deleted successfully"
           },
           "404": {
             "description": "Book not found"
